--- a/grid.generator.scss
+++ b/grid.generator.scss
@@ -41,7 +41,7 @@ html { box-sizing: border-box; }
       display: flex;
       flex: 0 0 auto;
       flex-basis: percentage($i/$gridColumns);
-      max-width: percentage($i/$gridColumns);
+      width: percentage($i/$gridColumns);
       flex-wrap: wrap;
     }
   }
