--- a/grid.css
+++ b/grid.css
@@ -1331,28 +1331,28 @@ html {
   justify-content: space-around; }
 
 .grid-align-top {
-  items: flex-start; }
+  align-items: flex-start; }
 
 .grid-align-self-top {
-  self: flex-start; }
+  align-self: flex-start; }
 
 .grid-align-bottom {
-  items: flex-end; }
+  align-items: flex-end; }
 
 .grid-align-self-bottom {
-  self: flex-end; }
+  align-self: flex-end; }
 
 .grid-align-middle {
-  items: center; }
+  align-items: center; }
 
 .grid-align-self-middle {
-  self: center; }
+  align-self: center; }
 
 .grid-align-stretch {
-  items: stretch; }
+  align-items: stretch; }
 
 .grid-align-self-stretch {
-  self: stretch; }
+  align-self: stretch; }
 
 .grid-flex {
   display: -webkit-box;
